--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <td>X</td>
                     <td>BRASIL</td>
                     <td>
-                        <select>
+                        <select class="opcoes">
                             <option>SÉRVIA</option>
                             <option>SUIÇA</option>
                             <option>CAMARÕES</option>
