--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <td>BRASIL</td>
                     <td>
                         <select class="opcoes">
-                            <option>SÉRVIA</option>
+                            <option class="servia">SÉRVIA</option>
                             <option>SUIÇA</option>
                             <option>CAMARÕES</option>
                         </select>
