--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <td>X</td>
                     <td>BRASIL</td>
                     <td>
-                        <select class="opcoes">
+                        <select>
                             <option class="servia">SÉRVIA</option>
                             <option>SUIÇA</option>
                             <option>CAMARÕES</option>
