--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <td>X</td>
                     <td>BRASIL</td>
                     <td>
-                        <select>
+                        <select class="opcoes">
                             <option class="servia">SÉRVIA</option>
-                            <option>SUIÇA</option>
-                            <option>CAMARÕES</option>
+                            <option class="suica">SUIÇA</option>
+                            <option class="camaroes">CAMARÕES</option>
                         </select>
                     </td>
                 </tr>
